# feedar

./: .env_local_example  LICENSE  README.md  bahuruva.md  pyproject.toml  railway.json  requirements.txt
about/: todo.md  urls.py  views.py
about/strings/: about.txt  content.txt  heading.txt  subheading.txt
home/: helpers.py  models.py  tasks.py  urls.py  views.py
home/exploration/: ay_phonetics.py  dhivehi_mv.py  phonetics  pronunciation.txt  readme.md  response.txt
home/helpers/: api_calls.py  db_process.py  dhivehi_nlp_ext.py  english_removal.py  formatting.py  latin.py  mynameisroot.py  search_process.py  thaana_to_latin.py
home/migrations/: 0001_initial.py  0002_alter_word_word.py  0003_webpage_searchresponse.py  0004_webpage_image_link.py  0005_alter_webpage_image_link.py  0006_alter_searchresponse_response.py  0007_alter_searchresponse_unique_together.py  0008_alter_webpage_url.py  0009_searchresponse_date.py  0010_indexqueue.py  0011_webpage_text_content.py  0012_webpage_text_section.py  0013_remove_searchresponse_response_searchresponse_link.py  0014_remove_webpage_image_link_remove_webpage_title_and_more.py  0015_webpage_status.py  0016_meaning_source_word_category.py  0017_partofspeech_remove_word_category_word_category.py  0018_searchmanager.py  0019_alter_searchmanager_sezzon.py  0020_auto_20240301_0756.py
jstoolchain/: package-lock.json  package.json  tailwind.config.js  watchers.xml
mysite/: urls.py  wsgi.py
mysite/settings/: base.py  dev.py  huey_settings.py  production.py  pwa_settings.py
pwa/: urls.py  views.py
(+39 files in other folders)
