[tool.poetry]
name = "django-redis-postgres"
version = "0.1.0"
description = ""
authors = ["fauzaanu <fauzaangasim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
gunicorn = "^21.2.0"
psycopg2 = "^2.9.9"
whitenoise = "^6.6.0"
sqlparse = "^0.4.4"
django-environ = "^0.11.2"
hiredis = "^2.3.2"
redis = "^5.0.1"
django-crispy-forms = "^2.1"
crispy-tailwind = "^1.0.0"
python-dotenv = "^1.0.1"
huey = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
